# wingpanel-indicator-datetime

./: .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: gettext.yml  main.yml
data/: CMakeLists.txt  EventRow.css  GridDay.css  datetime.appdata.xml.in  datetime.gresource.xml  datetime.gschema.xml  datetime.metainfo.xml.in  io.elementary.desktop.wingpanel.datetime.gresource.xml  io.elementary.desktop.wingpanel.datetime.gschema.xml  main.css  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ae.po  af.po  ak.po  am.po  ar.po  ast.po  ay.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  ckb.po  cr.po  cs.po  da.po  datetime-indicator.pot  de.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  en_ZA.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  gl.po  (+71 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+166 more)
schemas/: io.elementary.desktop.wingpanel.datetime.gschema.xml  org.pantheon.desktop.wingpanel.indicators.datetime.gschema.xml
src/: CMakeLists.txt  DateIterator.vala  DateRange.vala  Event.vala  Indicator.vala
src/Models/: CalendarModel.vala
src/Services/: CalendarStore.vala  ClockSettings.vala  DateSettings.vala  DesktopSettings.vala  EventsManager.vala  GeolocationManager.vala  SettingsManager.vala  TimeManager.vala  WeatherManager.vala
src/Util/: DateIterator.vala  DateRange.vala  Util.vala
src/Widgets/: Calendar.vala  CalendarDay.vala  CalendarGrid.vala  CalendarView.vala  ComponentRow.vala  EventRow.vala  EventsListBox.vala  Grid.vala  GridDay.vala  PanelLabel.vala  WeatherWidget.vala
src/Widgets/calendar/: Calendar.vala  CalendarModel.vala  CalendarView.vala  ControlHeader.vala  Grid.vala  GridDay.vala  Header.vala  Util.vala  WeekLabels.vala
src/Widgets/events/: EventStore.vala
vapi/: libecal-1.2.vapi  libical.vapi
